# SMT-LIB-db

./: .gitignore  LICENSE  PROBLEMS  README_RELEASE.md  postprocess.py  pyproject.toml  requirements.txt  shell.nix  wsgi.py
contrib/: add_benchmark_indexes.sh  missing_counter.py  plot-slides.py  visualize.py
contrib/studies/: average_rating.py  family_sizes.py  solvers_years.py  total_used_solved.py
klhm/: README.md  build.zig
klhm/src/: data.zig  main.zig  symbols.zig  tokens.zig
klhm/testFiles/: 00004.smt2  arbiter_array_cex_w32d32q16n4b34.smt2  lan_replace44.smt2  test.smt2
modules/: benchmarks.py  evaluations.py  fixup.py  solvers.py
static_page/: benchmarks.py  charts.py  common_charts.py  families.py  logics.py  style.css
static_page/templates/: family.html  isomap_error.html  isomap_index.html
studies/: average_rating.py  benchmark_size.py  family_sizes.py  solvers_years.py
webapp/: charts.py
webapp/templates/: isomap.html  isomap_index.html
websites/: wsgi.py
websites/static_page/: charts.py  common_charts.py  families.py  logics.py
websites/static_page/templates/: benchmark.html  charts.html  index.html  isomap.html  isomap_error.html  logic.html  logics.html
websites/webapp/: charts.py
websites/webapp/templates/: isomap.html
