[project]
name = "smt-lib-db"
version = "0.1.0"
description = "Tooling to build a metadata database of SMT-LIB benchmarks"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "beautifulsoup4>=4.14.2",
    "connectorx>=0.4.4",
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
    "polars>=1.33.1",
    "pyarrow>=21.0.0",
    "rich>=14.1.0",
    "scikit-learn>=1.7.2",
    "typer>=0.19.2",
    "vl-convert-python>=1.8.0",
]
